@@ -4,6 +4,10 @@
 # BREAK = change breaks existing code
 # BUG    = fixed a bug that was (or could have been) crashing
 
+[SVN 2922] September 15, 2010
+    [BUG] Mac builds fail: maybe using older versions of SDL_ttf or
+      SDL_mixer. Restore version conditional code in font and music modules.
+
 [SVN 2921] September 15, 2010
     Merge fsencoding branch back into trunk. This adds corrected Unicode file path
     handling to Pygame. File paths can contain any UTF-32 character, except \x00,
